--- a/danmuManual.html
+++ b/danmuManual.html
@@ -42,13 +42,13 @@
       </ol>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:12pt; font-weight:bold">普通模板链接：</span>
-        <a style="color:#0563c1" href="https://cdn.statically.io/gh/popzoo/barrage/master/json/template.json">
+        <a style="color:#0563c1" href="https://cdn.statically.io/gh/popzoo/barrage/master/json/template.json" target="_blank">
           <span style="color:#0563c1; font-family:等线; font-size:12pt; font-weight:bold; text-decoration:underline">https://cdn.statically.io/gh/popzoo/barrage/master/json/template.json</span></a><br>
         <span style="font-family:等线; font-size:12pt; font-weight:bold">极简模板链接：</span>
-        <a style="color:#0563c1" href="https://cdn.statically.io/gh/popzoo/barrage/master/json/easyTemplate.json">
+        <a style="color:#0563c1" href="https://cdn.statically.io/gh/popzoo/barrage/master/json/easyTemplate.json" target="_blank">
           <span style="color:#0563c1; font-family:等线; font-size:12pt; font-weight:bold; text-decoration:underline">https://cdn.statically.io/gh/popzoo/barrage/master/json/easyTemplate.json</span></a><br>
         <span style="font-family:等线; font-size:12pt; font-weight:bold">公用弹幕链接：</span>  
-        <a style="color:#0563c1" href="https://cdn.statically.io/gh/popzoo/barrage/master/danmu.json">
+        <a style="color:#0563c1" href="https://cdn.statically.io/gh/popzoo/barrage/master/danmu.json" target="_blank">
           <span style="color:#0563c1; font-family:等线; font-size:12pt; font-weight:bold; text-decoration:underline">https://cdn.statically.io/gh/popzoo/barrage/master/danmu.json</span></a>
       </p>
       <p style="font-size:12pt; line-height:150%; margin-left: 24px; orphans:0; text-align:justify; widows:0">
