--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ $(function(){//极速 	#FFBBFF
 	},{
 		'months' : 2,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉君上大名【Pudd*Panda**】</span>',
-		'even' :'<span style="color:#FF83FA;">巨赠￥20元宝，君上财冲牛斗，神射紫薇！</span>'		
+		'even' :'<span style="color:#FF83FA;">巨赠￥20元通宝，君上财冲牛斗，神射紫薇！</span>'		
 	},{
 		'months' : 6,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉恩公威名【五花肉变成**】</span>',
@@ -75,7 +75,7 @@ $(function(){//极速 	#FFBBFF
 		'months' : 6,
 
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉贵人大名【我的第220位**】</span>',
-		'even' :'<span style="color:#FF83FA;">硕捐￥5元大钞，贵人仗义疏财，乐善好施！</span>'		
+		'even' :'<span style="color:#FF83FA;">硕捐￥5元宝币，贵人仗义疏财，乐善好施！</span>'		
 	},{
 		'months' : 10,
 		'times' :'♨♨♨♨♨♨氤氲缭绕♨♨♨♨♨♨',
@@ -445,7 +445,7 @@ $(function(){//极速 	#FFBBFF
 	},{
 		'months' : 6,
 		'times' :'V0.8.2',
-		'even' :'……敬请期待……'	
+		'even' :'感谢胖头鱼大佬修复切换账号鱼吧不签到，感谢坑尼酱修修alert阻断，修复版本号对比，修复火力节点的err'	
 	},{
 		'months' : 8,
 		'times' :'V0.8.3',
@@ -453,7 +453,7 @@ $(function(){//极速 	#FFBBFF
 	},{
 		'months' : 10,
 		'times' :'V0.8.4',
-		'even' :'……翘首以待……'							
+		'even' :'……敬请期待……'							
 	}]},		
 	{
 	'year' : '<div onclick="jumpToShareNode()" style="color:#EE3B3B;">除恶</div>',
