--- a/index.html
+++ b/index.html
@@ -83,11 +83,9 @@ $(function(){//极速 	#FFBBFF
 	},{
 		'months' : 10,
 		'times' :'♨♨♨♨♨♨供奉香火♨♨♨♨♨♨',
-		'even' :'Only donator can site this place!'	
-	}]},
+		'even' :'Only donator can site this place!'
 	{
-	// 'year' : '<a href="https://popzoo.github.io/zoo/hiddenManual.html" target="_blank" style="color:magenta;">点赞</a>',
-	'year' : '<a href="https://popzoo.github.io/zoo/hiddenFlower.html" target="_blank" style="color:#BF3EFF;">点赞</a>',
+	'year' : '<a href="https://popzoo.github.io/barrage/index.html" target="_blank" style="color:#BF3EFF;">点赞</a>',
 	'events' :[
 	{
 		'months' : 3,
