--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ $(function(){//极速 	#FFBBFF
 	}]},
 	{
 	// 'year' : '<a href="https://popzoo.github.io/zoo/hiddenManual.html" target="_blank" style="color:magenta;">点赞</a>',
-	'year' : '<a href="href="https://popzoo.github.io/barrage/index.html" target="_blank" style="color:#BF3EFF;">点赞</a>',
+	'year' : '<a href="https://popzoo.github.io/barrage/index.html" target="_blank" style="color:#BF3EFF;">点赞</a>',
 	'events' :[
 	{
 		'months' : 3,
