--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ $(function(){//极速 	#FFBBFF
 	}
 	function jumpToShareNode(){
 		sessionStorage.setItem('personalDanmu',"limit");
-		window.open("https://popzoo.github.io/pop/fireroom.html","_blank");
+		window.open("https://popzoo.github.io/monitor/","_blank");
 	}
 </script>
 </body>
