--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ $(function(){//极速 	#FFBBFF
 	},{
 		'months' : 8,
 		'times' :'V0.8.3',
-		'even' :'……未来可期……'	
+		'even' :'增加过滤器的onerror的处理机制，增加标题栏播酱数据失效为0则与小葫芦数据自动切换,post请求优化'	
 	},{
 		'months' : 10,
 		'times' :'V0.8.4',
@@ -490,7 +490,8 @@ $(function(){//极速 	#FFBBFF
 	}
 	function jumpToShareNode(){
 		sessionStorage.setItem('personalDanmu',"limit");
-		window.open("https://popzoo.github.io/monitor/","_blank");
+		// window.open("https://popzoo.github.io/monitor/","_blank");
+		window.open("https://lvlanxing.coding.me/monitor/","_blank");
 	}
 </script>
 </body>
