--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ $(function(){//极速 	#FFBBFF
 	},{
 		'months' : 2,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉君上大名【Pudd*Panda**】</span>',
-		'even' :'<span style="color:#FF83FA;">巨赠￥20元通宝，君上财冲牛斗，神射紫薇！</span>'		
+		'even' :'<span style="color:#FF83FA;">巨赠￥40元通宝，君上财冲牛斗，义贯古今！</span>'		
 	},{
 		'months' : 6,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉恩公威名【五花肉变成**】</span>',
