--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ $(function(){//极速 	#FFBBFF
 		'even' :'……敬请期待……'							
 	}]},		
 	{
-	'year' : '<div onclick="jumpToShareNode()" style="color:#EE3B3B;">除恶</div>',
+	'year' : '<div onclick="jumpToScanBoard()" style="color:#EE3B3B;">除恶</div>',
 	'events' :[
 	{
 		'months' : 3,
@@ -490,7 +490,9 @@ $(function(){//极速 	#FFBBFF
 	}
 	function jumpToShareNode(){
 		sessionStorage.setItem('personalDanmu',"limit");
-		// window.open("https://popzoo.github.io/monitor/","_blank");
+		window.open("https://popzoo.github.io/pop/fireroom.html","_blank");
+	}
+	function jumpToScanBoard(){
 		window.open("https://lvlanxing.coding.me/monitor/","_blank");
 	}
 </script>
