--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</div>
 	<div class="w1000 tc body" >
 		<p style="font-size: 34px;font-weight: 600;color: blue;margin-top: 20px;">时光轴的记忆</p>
-		<h3 class='header' style="font-size: 28px; background-color: rgba(53,53,53,0);">大人的慷慨打赏，作者的孜孜矻矻！</h3>
+		<h3 class='header' style="font-size: 28px; background-color: rgba(53,53,53,0);">大人的慷慨赞助，小编的孜孜矻矻！</h3>
     	<div id="qr_code_pic" style="text-align: center; display: none;">
     	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/Alipay.png" width="300px">
     	    <span style="margin: 0 100px;"></span>
@@ -40,7 +40,7 @@
 			<div class="middle_line"></div>
 		</div>
 	</div>
-	<footer class="statcss">
+	<footer class="statcss" style="margin-top: 30px;">
 		<p>ALL COPYRIGHT RESERVED || DATA COLLETCTED FROM JADEBONE</p>
 		<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1278032070'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "v1.cnzz.com/z_stat.php%3Fid%3D1278032070%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
 	</footer>
@@ -73,36 +73,44 @@ $(function(){//极速 	#FFBBFF
 		// 'even' :'<span style="color:#FF83FA;">贵客盈门，蓬荜生辉，物华天宝，人杰这灵！</span>'	
 	},{
 		'months' : 6,
-
-		'times' :'<span style="color:#FFBBFF;">楼顶供奉贵人大名【我的第220位**】</span>',
-		'even' :'<span style="color:#FF83FA;">硕捐￥5元宝币，贵人仗义疏财，乐善好施！</span>'		
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉贵人佳名【我的第220位**】</span>',
+		'even' :'<span style="color:#FF83FA;">硕捐￥10元宝币，贵人仗义疏财，乐善好施！</span>'			
 	},{
 		'months' : 10,
-		'times' :'♨♨♨♨♨♨氤氲缭绕♨♨♨♨♨♨',
-		'even' :'This building need many kind of person!'
+		'times' :'<span style="color:#FFBBFF;">供奉排位，虚以待座</span>',		
+		'even' :'<span style="color:#FF83FA;">静候各方神豪大能、仁君义公坐镇此方宝座</span>'				
 	},{
 		'months' : 10,
-		'times' :'♨♨♨♨♨♨供奉香火♨♨♨♨♨♨',
-		'even' :'Only donator can site this place!'	
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉尊者大名【**꧂】</span>',
+		'even' :'<span style="color:#FF83FA;">恩赐￥5元银饼，尊者鼎助义施，胸怀百川！</span>'				
 	}]},
 	{
 	// 'year' : '<a href="https://popzoo.github.io/zoo/hiddenManual.html" target="_blank" style="color:magenta;">点赞</a>',
 	'year' : '<a href="https://popzoo.github.io/barrage/index.html" target="_blank" style="color:#BF3EFF;">点赞</a>',
 	'events' :[
 	{
-		'months' : 3,
+	},{
+		'months' : 2,
+		'times' :'♨♨♨♨♨♨氤氲缭绕♨♨♨♨♨♨',
+		'even' :'This building need many kind of person!'
+	},{
+		'months' : 2,
+		'times' :'♨♨♨♨♨♨供奉香火♨♨♨♨♨♨',
+		'even' :'Only donator can site this place!'
+	},{		
+		'months' : 7,
 		'times' :'<span style="color:greenyellow;">开启隐藏之路</span>',
 		'even' :'<span style="color:lawngreen;">隐藏功能需要用户上传私有弹幕后便可使用，主要是公有弹幕被好多人霸屏滥用的一塌糊涂！</span>'
 	},{
-		'months' : 3,
+		'months' : 7,
 		'times' :'<span style="color:greenyellow;">点赞无私捐助</span>',
 		'even' :'<span style="color:lawngreen;">点击上方紫色字体的“点赞”按钮后，即可跳转到获取隐藏功能的详细使用教程的页面！</span>'		
 	},{
-		'months' : 8,
+		'months' : 11,
 		'times' :'火力横扫，足迹万千',
 		'even' :'签到手速王，顶级车队logo'
 	},{
-		'months' : 8,
+		'months' : 11,
 		'times' :'笑傲鱼塘，睥睨水友',
 		'even' :'满级粉丝牌子，幻神弹幕特效'	
 	}]},	
@@ -453,27 +461,35 @@ $(function(){//极速 	#FFBBFF
 	},{
 		'months' : 10,
 		'times' :'V0.8.4',
-		'even' :'……敬请期待……'							
+		'even' :'修车队改签到后跳转的页面，增加用户版本号错误反馈机制，修复福利社抽奖无法参与没有关注的活动'							
 	}]},		
 	{
 	'year' : '<div onclick="jumpToScanBoard()" style="color:#EE3B3B;">除恶</div>',
 	'events' :[
 	{
-		'months' : 3,
+		'months' : 2,
 		'times' :'不忘初心',
-		'even' :'⚡⚡⚡⚡⚡⚡地瘴灭魔⚡⚡⚡⚡⚡⚡'
+		'even' :'⚡⚡⚡⚡⚡⚡神荼蓄力，地瘴灭魔⚡⚡⚡⚡⚡⚡'
 	},{
-		'months' : 3,
+		'months' : 2,
 		'times' :'扫黑除恶',
-		'even' :'⚡⚡⚡⚡⚡⚡天雷诛邪⚡⚡⚡⚡⚡⚡'		
+		'even' :'⚡⚡⚡⚡⚡⚡郁垒发威，天雷诛邪⚡⚡⚡⚡⚡⚡'
 	},{
-		'months' : 8,
-		'times' :'<span style="color:red;">楼底镇压大恶人-武林恶名[乔二郎**]</sapn>',
+		'months' : 6,
+		'times' :'神罚囹圄',
+		'even' :'⚡⚡⚡⚡⚡⚡坑戮水友遭天谴⚡⚡⚡⚡⚡⚡'
+	},{
+		'months' : 6,
+		'times' :'待魔入瓮',
+		'even' :'⚡⚡⚡⚡⚡⚡戕害忠良受神诛⚡⚡⚡⚡⚡⚡'
+	},{			
+		'months' : 10,
+		'times' :'<span style="color:red;">楼底镇压大恶人-武林恶名[Q友:乔二郎**]</sapn>',
 		'even' :'<span style="color:#EE3B3B;">白嫖偶的脚本，还多次侮辱作者大大，这种无赖大恶人，必须镇压九幽冥火之地狱，焚魂灼魄！</sapn>'
 	},{
-		'months' : 8,
-		'times' :'<span style="color:red;">楼底镇压大恶人-江湖臭名[有事别找我**]</span>',
-		'even' :'<span style="color:#EE3B3B;">没得罪的人莫名其妙的就和我有仇，三番两次的来找茬，必须镇压在尸魂魔窟之深渊，不见天日！</sapn>'	
+		'months' : 10,
+		'times' :'<span style="color:red;">楼底封禁大魔头-江湖臭名[主播:William丶**]</span>',
+		'even' :'<span style="color:#EE3B3B;">发点弹幕抢火力鱼丸，就被诬刷屏禁言一年，这种脑残主播必须镇压在尸魂魔窟之深渊，不见天日！</sapn>'	
 	}
 	]}];
 	$('.event_wrap').eventFlow({'events':bigEvent});
