--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
 		<ul class='clearfix'>
 			<!-- <li class='float_six'><a href="javascript:;">首页</a></li> -->
 			<li class='float_six'><a href="https://popzoo.github.io/zoo/" style="color:gold;">时光轴</a></li>
-			<li class='float_six'><a href="#" onclick="jumpToShareNode()" style="color:gold;">火力房</a></li>
-			<!-- <li class='float_six'><a href="javascript:alert('功能还待开发');" style="color:gold;">火力房</a></li> -->
 			<li class='float_six'><a href="https://popzoo.github.io/barrage/" style="color:gold;">云弹幕</a></li>
+			<li class='float_six'><a href="https://popzoo.github.io/pop/fireroom.html" style="color:gold;">火力房</a></li>
+			<!-- <li class='float_six'><a href="javascript:alert('功能还待开发');" style="color:gold;">火力房</a></li> -->
 			<li class='float_six'><a href="https://popzoo.github.io/pop/giftshow.html" style="color:gold;">礼物秀</a></li>
 			<li class='float_six'><a href="https://popzoo.github.io/pop/motorcade.html" style="color:gold;">车队展</a></li>
-			<li class='float_six'><a href="https://greasyfork.org/zh-CN/scripts/389379" style="color:gold;">GreaseFork</a></li>
+			<li class='float_six'><a href="https://lvlanxing.coding.me/monitor/" style="color:gold;">看板台</a></li>
+			<!-- <li class='float_six'><a href="https://greasyfork.org/zh-CN/scripts/389379" style="color:gold;">看板台</a></li> -->
 		</ul>
 	</div>
 	<div class="w1000 tc body" >
@@ -503,10 +504,10 @@ $(function(){//极速 	#FFBBFF
 			}
 		}
 	}
-	function jumpToShareNode(){
-		sessionStorage.setItem('personalDanmu',"limit");
-		window.open("https://popzoo.github.io/pop/fireroom.html","_blank");
-	}
+	// function jumpToShareNode(){
+	// 	sessionStorage.setItem('personalDanmu',"limit");
+	// 	window.open("https://popzoo.github.io/pop/fireroom.html","_blank");
+	// }
 	function jumpToScanBoard(){
 		window.open("https://lvlanxing.coding.me/monitor/","_blank");
 	}
