--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChat.png" width="300px">
     	</div>		
 		<p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
+		<p class='header' style="font-size: 20px;line-height: 35px; background-color: rgba(53,53,53,0);color:red;">目前网址受到大量的恶意攻击，为大家上传数据安全着想，站长关停了火力房、看板台以及云弹幕界面的弹幕下载功能，把保护大家数据的安全放在第一位，让罪恶不会得逞，让正义照亮人间！不忘初心，扫黑除恶，暴虎冯河，铁拳出击！</p>
 		<div class="event_wrap clearfix">
 			<div class="middle_line"></div>
 		</div>
