--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@ $(function(){//极速 	#FFBBFF
 	{
 		'months' : 2,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉大人神名【**只看自己**】</span>',
-		'even' :'<span style="color:#FF83FA;">豪掷￥20元宝钞，大人仁冠八方，名誉九州！</span>'
+		'even' :'<span style="color:#FF83FA;">豪掷￥25元宝钞，大人仁冠八方，名誉九州！</span>'
 	},{
 		'months' : 2,
-		'times' :'<span style="color:#FFBBFF;">楼顶供奉君上大名【Pudd*Panda**】</span>',
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉君上大名【Pudding***】</span>',
 		'even' :'<span style="color:#FF83FA;">巨赠￥40元通宝，君上财冲牛斗，义贯古今！</span>'		
 	},{
 		'months' : 6,
-		'times' :'<span style="color:#FFBBFF;">楼顶供奉恩公威名【五花肉变成**】</span>',
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉恩公威名【肥肉变成**】</span>',
 		'even' :'<span style="color:#FF83FA;">瀚赏￥5元大洋，恩人古道热肠，雪中送炭！</span>'		
 		// 'times' :'<span style="color:#FFBBFF;">真的木有了</span>',
 		// 'even' :'<span style="color:#FF83FA;">贵客盈门，蓬荜生辉，物华天宝，人杰这灵！</span>'	
@@ -485,12 +485,12 @@ $(function(){//极速 	#FFBBFF
 		'even' :'⚡⚡⚡⚡⚡⚡戕害忠良受神诛⚡⚡⚡⚡⚡⚡'
 	},{			
 		'months' : 10,
-		'times' :'<span style="color:red;">楼底镇压大恶人-武林恶名[Q友:乔二郎**]</sapn>',
+		'times' :'<span style="color:red;">楼底镇压大恶人-武林恶名[乔二郎**]</sapn>',
 		'even' :'<span style="color:#EE3B3B;">白嫖偶的脚本，还多次侮辱作者大大，这种无赖大恶人，必须镇压九幽冥火之地狱，焚魂灼魄！</sapn>'
 	},{
 		'months' : 10,
-		'times' :'<span style="color:red;">楼底封禁大魔头-江湖臭名[主播:William丶**]</span>',
-		'even' :'<span style="color:#EE3B3B;">发点弹幕抢火力鱼丸，就被诬刷屏禁言一年，这种脑残主播必须镇压在尸魂魔窟之深渊，不见天日！</sapn>'	
+		'times' :'<span style="color:red;">楼底封禁大魔头-江湖臭名[主播:William**]</span>',
+		'even' :'<span style="color:#EE3B3B;">发点弹幕抢火力鱼丸被诬刷屏禁言一年，这种脑残主播必须镇压在尸魂魔窟之深渊，不见天日！</sapn>'	
 	}
 	]}];
 	$('.event_wrap').eventFlow({'events':bigEvent});
