--- a/hiddenManual.html
+++ b/hiddenManual.html
@@ -27,7 +27,7 @@
 			<li class='float_six'><a href="https://greasyfork.org/zh-CN/scripts/389379" style="color:gold;text-decoration:none;">GreaseFork</a></li>
 		</ul>
 	</div>
-<!-- 	<div id="control_show_manual" style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.7);border-radius: 10px;display:inherit;"> -->
+	<!-- <div id="control_show_manual" style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.7);border-radius: 10px;display:inherit;"> -->
   <div id="control_show_manual" style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.7);border-radius: 10px;display:none;">
       <h1 style="font-size:22pt; line-height:150%; margin:17pt 0pt 16.5pt; padding-top: 15px;orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:center; widows:0">
         <span style="font-family:等线; font-size:22pt; font-weight:bold">薅羊毛脚本隐藏功能</span></h1>
@@ -36,21 +36,23 @@
       </p>
       <ol type="1" style="margin:0pt; padding-left:4pt;font-size:12pt; font-weight:bold;line-height: 30px;">
         <li>
-          1.自动发送答谢水友礼物弹幕+自动发送感谢房管开火弹幕（注：0.8.0版本开始，原“礼物致谢”改为“礼物答谢”）；
+          1.自动发送答谢水友礼物弹幕+自动发送感谢房管开火弹幕（默认不启用）；
         </li><li>
           2.自定义私有弹幕后，是否启用AI弹幕与之混用（默认不启用，注：未定义私有弹幕则启用AI）；
         </li><li>
-          3.是否关闭幻神弹幕特效（默认不关闭）；
-        </li><li>          
-          4.自定义设置自动跳转次数上限（默认每天100次）;
+          3.是否开启匿名用户功能（默认是半匿名状态，如"大王***"）；          
         </li><li>
-          5.自定义设置火力全开/粉丝福利社结束后等待时间（默认等待60s，注：从0.8.0版本“火力等待”改为“结束等待”）；
+          4.是否关闭幻神弹幕特效（默认有幻神特效，此功能一般没必要关闭）；
         </li><li>          
-          6.自定义不符合房间的跳转延迟等待时间（默认是3s后跳转）;          
+          5.自定义设置自动跳转次数上限（默认每天100次，不同等级对应不同跳转次数上限）;
+        </li><li>
+          6.自定义设置火力全开/粉丝福利社结束后等待时间（默认等待60s没重开火力全开则跳转）；
+        </li><li>          
+          7.自定义不符合房间的跳转延迟等待时间（新跳转房间条件不达标，则默认是3s后跳转）;          
         </li>
       </ol>
       <p style="font-size:12pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; widows:0">
-        <span style="font-family:等线; font-size:12pt;font-weight: 600;">原🀄自动取关🀄功能现在已经改为默认设置了(非牌子和特殊关注房间，脚本抢完丸子跑路会自动取关)，后期还会增加一些有趣实用的功能，请多关注QQ群内动态！Here We Go，教程走起：</span>
+        <span style="font-family:等线; font-size:12pt;font-weight: 600;">原🀄自动取关🀄功能现在已经改为默认设置了(非牌子和非特殊关注房间，脚本抢完丸子跑路会自动取关)，后期还会增加一些有趣实用的功能，请多关注QQ群(650178547)内动态！Here We Go，教程走起：</span>
       </p>
 
       <h2 style="font-size:14pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
@@ -97,7 +99,7 @@
       <p style="margin:0pt; orphans:0; text-align:justify; line-height: 25px; widows:0">
         <span style="font-family:等线; font-size:12pt">f)</span>
         <span style="background-color:#ffff00; font-family:等线; font-size:12pt; font-weight:bold">使用注意：</span>
-        <span style="font-family:等线; font-size:12pt">如果房间有火力全开的话，还会自动发AI或云弹幕，但谢礼弹幕的优先级是最高的，谢礼弹幕时间间隔一般在10s±5左右（外加自己和上一条自己弹幕间隔数随机2~5个），所以有可能漏掉礼物横幅展示时间较短的礼物（比如一张办卡等）; 如果不使用斗鱼的屏蔽小礼物的话，也会有感谢弹幕的，建议非房管用暂时还是屏蔽掉吧。不然刷弹幕太多了容易霸屏！</span>
+        <span style="font-family:等线; font-size:12pt">如果房间有火力全开的话，还会自动发AI或云弹幕，但谢礼弹幕的优先级是最高的，谢礼弹幕时间间隔一般在10s±5左右（外加自己和上一条自己弹幕间隔数随机2~5个），所以有可能漏掉礼物横幅展示时间较短的礼物（比如一张办卡，显示6s）; 如果不使用斗鱼的屏蔽小礼物的话，也会有感谢弹幕的，建议非房管用暂时还是屏蔽掉吧。不然刷弹幕太多了容易霸屏被封！</span>
       </p>
       <p style="margin-left:20px; orphans:0; widows:0">
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_7.png" width="336" height="221" alt="" style="-aw-left-pos:0pt; -aw-rel-hpos:column; -aw-rel-vpos:paragraph; -aw-top-pos:0pt; -aw-wrap-type:inline;"/></p>
@@ -108,7 +110,7 @@
       </h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">a)</span>
-        <span style="font-family:等线; font-size:12pt">在已经设置了自定义的弹幕库的前提下，是否启用AI弹幕与之混用。之所以保留这个功能，主要是预防前期私有云弹幕的弹幕量较少，拿AI沙雕萌新来凑数是最实用的了！默认是不开启的，(若您没有定制私有云弹幕，那么AI弹幕是默认开启的);</span>
+        <span style="font-family:等线; font-size:12pt">在已经设置了自定义的弹幕库的前提下，是否启用AI弹幕与之混用。之所以保留这个功能，主要是预防前期私有云弹幕的弹幕量较少，拿AI沙雕萌新来凑数是最实用的了！默认是不开启的，(若您没有定制私有云弹幕，那么AI弹幕是默认开启的)，您可以单条弹幕存放（左下图）也可以合并存放（右下图）;</span>
       <p style="margin:5px 0 10px 20px; orphans:0; text-align:justify; widows:0">
         <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">这里复制</span>
         <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
@@ -122,10 +124,26 @@
 
 
       <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
-        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">3、关闭幻神特效</span>
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">3、开启匿名用户功能</span>
       </h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
-        <span style="font-family:等线; font-size:12pt">若您每天开自动脚本薅羊毛次数较多或电脑性能较弱的话，建议您关闭幻神弹幕特效，这样会节省一点性能和资源，主要是页面加载也不容易出更多的错误;</span>
+        <span style="font-family:等线; font-size:12pt">由于之前网站的一些数据被恶意毁坏，同时为了大家数据安全着想，脚本安全做了全面升级，默认情况下使用脚本收集用户共享的网络节点信息是半匿名的，如“大王***”共享了一个火力节点，如果开启“匿名用户”模式，则显示为“匿名***”共享了一个火力节点，把用户的安全和隐私力求做到最好，您可以单条弹幕存放（左下图）也可以合并存放（右下图）;</span>
+      <p style="margin:5px 0 10px 20px; orphans:0; text-align:justify; widows:0">
+        <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">这里复制</span>
+        <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
+        <span style="font-family:等线; font-size:12pt">🀄匿名用户🀄</span>
+      </p>         
+      </p>      
+      <table style="margin-left: 20px;"><tr>
+        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_20.png" width="100%"></td><td>&nbsp;&nbsp;</td>
+        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_16.png" width="100%"></td>
+      </tr></table>
+
+      <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">4、关闭幻神特效</span>
+      </h2>
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
+        <span style="font-family:等线; font-size:12pt">若您每天开自动脚本薅羊毛次数较多或电脑性能较弱的话，建议您关闭幻神弹幕特效，这样会节省一点性能和资源，主要是页面加载也不容易出更多的错误。您可以单条弹幕存放（左下图）也可以合并存放（右下图）;</span>
       <p style="margin:5px 0 10px 20px; orphans:0; text-align:justify; widows:0">
         <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">这里复制</span>
         <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
@@ -134,12 +152,11 @@
       </p>      
       <table style="margin-left: 20px;"><tr>
         <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_18.png" width="100%"></td><td>&nbsp;&nbsp;</td>
-        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_17.png" width="100%"></td>
+        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_16.png" width="100%"></td>
       </tr></table>
 
-
       <h2 style="font-size:14pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
-        <span style="font-family:'等线 Light'; font-size:14pt; font-weight:bold">4、自定义火力跳转次数上限功能</span>
+        <span style="font-family:'等线 Light'; font-size:14pt; font-weight:bold">5、自定义火力跳转次数上限功能</span>
       </h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:'Segoe UI Symbol'; font-size:12pt">a)</span>
@@ -156,12 +173,14 @@
    
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">b)</span>
-        <span style="font-family:等线; font-size:12pt">斑竹的建议大号即花过钱的账户，最好别超过200次， 10级以下小号或没怎么充钱的账户小于100次。这个是个人经验，仅供参考，被系统禁言了，可别找我算账哦，禁言也不要惊慌，可以去斑竹的github找解决办法，找客服也没用。</span>
+        <span style="font-family:等线; font-size:12pt">不同账号等级和有无贵族称号，可以安全跳转的上限次数也不相同，下图是根据目前群内大家通过无数次的小黑屋试验出的规律，仅供大家参考，被系统禁言关小黑屋了，也不要惊慌，如果是贵族的话还可以找客服解封，非贵族可以去斑竹的<a style="color:red;font-weight:bold;" href="https://github.com/wolf-scream/FirePowerSeek/issues/2" target="_blank">github</a>找解决办法撒。</span>
       </p>
-
+     <table style="margin-left: 20px;"><tr>
+        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_17.png" width="77%"></td>
+      </tr></table>      
 
       <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
-        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">5、自定义火力全开/粉丝福利社活动结束后等待时间</span>
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">6、自定义火力全开/粉丝福利社活动结束后等待时间</span>
       </h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">a)</span>
@@ -179,15 +198,15 @@
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">b)</span>
         <span style="background-color:#ffff00; font-family:等线; font-size:12pt; font-weight:bold">使用注意:</span>
-        <span style="font-family:等线; font-size:12pt">当存放多条同样配置的参数时，则最新保存的起作用，如下图，起作用的是火力等待16s。此规则适用火力等待和跳转上限两个配置参数，但不建议这样使用，最好删除原有的配置，否则太混乱了！</span>
+        <span style="font-family:等线; font-size:12pt">当存放多条同样配置的参数时，则最新保存的起作用，如下图，默认起作用的最新配置的结束等待130s。此规则同样适用于“跳转上限”和“延迟等待”两个带数字的配置参数，但不建议这样混乱使用，最好删除原有重复的配置！</span>
       </p>        
       <p style="margin-left: 20px; orphans:0; text-align:justify; widows:0">
-        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_14.png" width="325" height="178" alt="" style="-aw-left-pos:0pt; -aw-rel-hpos:column; -aw-rel-vpos:paragraph; -aw-top-pos:0pt; -aw-wrap-type:inline" />
+        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_14.png"/>
         <span style="font-family:等线; font-size:10.5pt"></span>
       </p>
 
       <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
-        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">6、自定义不符合房间的跳转延迟等待时间</span>
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">7、自定义不符合房间的跳转延迟等待时间</span>
       </h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">a)</span>
@@ -214,7 +233,7 @@
           <span style="font-family:等线; font-size:12pt">1>上面的功能配置全都是存储在浏览器的localStorage中，只在当前浏览器的一个用户账号起作用，如果用户换电脑，换浏览器，或换账号则都需要重新配置;</span>
         </li>
         <li style="font-family:等线; font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
-          <span style="font-family:等线; font-size:12pt">2>弹幕发送时间间隔暂时不支持用户自定义，自动算法是根据自己的弹幕间隔数和当前房间热度自动计算。幻神弹幕暂时不支持用户配置取消，如大家有类似需求，可以邮件或QQ@我。人多话就搞下哈！</span></li>
+          <span style="font-family:等线; font-size:12pt">2>弹幕发送时间间隔暂时不支持用户自定义，算法是根据自己的弹幕间隔数(2~6条)和当前房间热度（6~15s时间间隔分布）自动计算。如大家还有类似自定义参数配置的需求，欢迎邮件或进入QQ群@斑竹哈！</span></li>
           <br/>
       </ol>
     </div>
@@ -239,7 +258,8 @@
             }
         }else{
             alert("请登录昵称验证后才能开启隐藏教程！");
-            window.location.href = "https://popzoo.github.io/zoo/hiddenFlower.html";
+            window.location.href = "https://popzoo.github.io/barrage/";
+            // window.location.href = "https://popzoo.github.io/zoo/hiddenFlower.html";
         }  
     }  
     function delayLoad(){
