--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ $(function(){//极速 	#FFBBFF
 	{
 		'months' : 2,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉大人神名【**只看自己**】</span>',
-		'even' :'<span style="color:#FF83FA;">豪掷￥25元宝钞，大人仁冠八方，名誉九州！</span>'
+		'even' :'<span style="color:#FF83FA;">豪掷￥30元宝钞，大人仁冠八方，名誉九州！</span>'
 	},{
 		'months' : 2,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉君上大名【Pudding***】</span>',
@@ -87,7 +87,6 @@ $(function(){//极速 	#FFBBFF
 		'even' :'<span style="color:#FF83FA;">恩赐￥5元银饼，贵人鼎助义施，胸怀百川！</span>'				
 	}]},
 	{
-	// 'year' : '<a href="https://popzoo.github.io/zoo/hiddenManual.html" target="_blank" style="color:magenta;">点赞</a>',
 	'year' : '<a href="https://popzoo.github.io/barrage/index.html" target="_blank" style="color:#BF3EFF;">点赞</a>',
 	'events' :[
 	{
@@ -463,7 +462,31 @@ $(function(){//极速 	#FFBBFF
 		'months' : 10,
 		'times' :'V0.8.4',
 		'even' :'修车队改签到后跳转的页面，增加用户版本号错误反馈机制，修复福利社抽奖无法参与没有关注的活动'							
-	}]},		
+	}]},
+	{
+	'year' : "迭代",
+	'events' :[
+	{
+		'months' : 2,
+		'times' :'V0.8.5',
+		'even' :'增加鱼丸收益和红包收益数目显示，增加vip的推送节点功能'
+	},{
+		'months' : 4,
+		'times' :'V0.8.6',
+		'even' :'脚本安全升级，增加隐藏功能-用户匿名，优化中奖弹幕的随机发送时间，优化红包抽奖条件过滤'	
+	},{
+		'months' : 6,
+		'times' :'V0.8.7',
+		'even' :'新增一键清空背包小礼物的功能，优化访问速度，过滤一些刷新的重复操作'	
+	},{
+		'months' : 8,
+		'times' :'V0.8.8',
+		'even' :'敬请期待'	
+	},{
+		'months' : 10,
+		'times' :'V0.8.9',
+		'even' :'未来可期'							
+	}]},			
 	{
 	'year' : '<div onclick="jumpToScanBoard()" style="color:#EE3B3B;">除恶</div>',
 	'events' :[
