--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChat.png" width="300px">
     	</div>		
 		<p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
-		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(53,53,53,0);color:red;margin-bottom: 70px;">薅羊毛新脚本(V0.8.6)的安全全面升级，建议大家赶快升级使用新脚本，新脚本还支持全匿名用户功能(见隐藏教程)，旧版本将于3天后停止服务。随后也将对弹幕库也进行安全升级改造，为防止意外，建议大家备份哦，给大家带来的不便还请谅解！</p>
+		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(53,53,53,0);color:red;margin-bottom: 70px;">薅羊毛新脚本(V0.8.7)的安全全面升级，建议大家赶快升级使用新脚本，新脚本还支持全匿名用户功能(见隐藏教程)，旧版本将于3天后停止服务。随后也将对弹幕库也进行安全升级改造，为防止意外，建议大家备份哦，给大家带来的不便还请谅解！</p>
 		<div class="event_wrap clearfix">
 			<div class="middle_line"></div>
 		</div>
@@ -69,22 +69,20 @@ $(function(){//极速 	#FFBBFF
 		'even' :'<span style="color:#FF83FA;">巨赠￥40元重宝，君上财冲牛斗，义贯古今！</span>'		
 	},{
 		'months' : 6,
-		'times' :'<span style="color:#FFBBFF;">楼顶供奉恩公威名【肥肉变成**】</span>',
-		'even' :'<span style="color:#FF83FA;">瀚赏￥5元大洋，恩人古道热肠，雪中送炭！</span>'		
-		// 'times' :'<span style="color:#FFBBFF;">真的木有了</span>',
-		// 'even' :'<span style="color:#FF83FA;">贵客盈门，蓬荜生辉，物华天宝，人杰这灵！</span>'	
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉神豪宝名【**燚】</span>',		
+		'even' :'<span style="color:#FF83FA;">仁施￥10元金贝，神豪气贯长虹，仁播华夏！</span>'	
 	},{
 		'months' : 6,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉尊者雅名【我的第220位**】</span>',
 		'even' :'<span style="color:#FF83FA;">硕捐￥10元宝币，尊者仗义疏财，乐善好施！</span>'			
 	},{
 		'months' : 10,
-		'times' :'<span style="color:#FFBBFF;">供奉排位，虚以待座</span>',		
-		'even' :'<span style="color:#FF83FA;">静候各方神豪大能、仁君义公坐镇此方宝座</span>'				
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉贵人赫名【**꧂】</span>',
+		'even' :'<span style="color:#FF83FA;">恩赐￥5元银饼，贵人鼎助义施，胸怀百川！</span>'		
 	},{
 		'months' : 10,
-		'times' :'<span style="color:#FFBBFF;">楼顶供奉贵人赫名【**꧂】</span>',
-		'even' :'<span style="color:#FF83FA;">恩赐￥5元银饼，贵人鼎助义施，胸怀百川！</span>'				
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉恩公威名【肥肉变成**】</span>',
+		'even' :'<span style="color:#FF83FA;">瀚赏￥5元大洋，恩人古道热肠，雪中送炭！</span>'			
 	}]},
 	{
 	'year' : '<a href="https://popzoo.github.io/barrage/index.html" target="_blank" style="color:#BF3EFF;">点赞</a>',
@@ -481,11 +479,11 @@ $(function(){//极速 	#FFBBFF
 	},{
 		'months' : 8,
 		'times' :'V0.8.8',
-		'even' :'敬请期待'	
+		'even' :'……敬请期待……'	
 	},{
 		'months' : 10,
 		'times' :'V0.8.9',
-		'even' :'未来可期'							
+		'even' :'……未来可期……'							
 	}]},			
 	{
 	'year' : '<div onclick="jumpToScanBoard()" style="color:#EE3B3B;">除恶</div>',
@@ -508,12 +506,12 @@ $(function(){//极速 	#FFBBFF
 		'even' :'⚡⚡⚡⚡⚡⚡戕害忠良受神诛⚡⚡⚡⚡⚡⚡'
 	},{			
 		'months' : 10,
-		'times' :'<span style="color:red;">楼底镇压大恶人-武林恶名[乔二郎**]</sapn>',
+		'times' :'<span style="color:red;">楼底镇压大恶人-武林恶名[QQ:乔二郎*]</sapn>',
 		'even' :'<span style="color:#EE3B3B;">白嫖偶的脚本，还多次侮辱作者大大，这种无赖大恶人，必须镇压九幽冥火之地狱，焚魂灼魄！</sapn>'
 	},{
 		'months' : 10,
-		'times' :'<span style="color:red;">楼底封禁大魔头-江湖臭名[主播:William**]</span>',
-		'even' :'<span style="color:#EE3B3B;">发点弹幕抢火力鱼丸被诬刷屏禁言一年，这种脑残主播必须镇压在尸魂魔窟之深渊，不见天日！</sapn>'	
+		'times' :'<span style="color:red;">楼底囚禁大魔头-江湖臭名[主播:William*]</span>',
+		'even' :'<span style="color:#EE3B3B;">发点弹幕抢鱼丸被诬刷屏禁言一年，这种脑残主播必须镇压在尸魂魔窟之深渊，不见天日！</sapn>'	
 	}
 	]}];
 	$('.event_wrap').eventFlow({'events':bigEvent});
