--- a/index.html
+++ b/index.html
@@ -533,6 +533,11 @@ $(function(){//极速 	#FFBBFF
 	function jumpToScanBoard(){
 		window.open("https://lvlanxing.coding.me/monitor/","_blank");
 	}
+	// function changeCnzzStyle(){
+	// 	let cnzzStyle = document.getElementById("cnzz_stat_icon_1278032070");
+	// 	cnzzStyle.setAttribute("style","color:orange;")
+	// }
+	
 </script>
 </body>
 </html>
