--- a/hiddenManual.html
+++ b/hiddenManual.html
@@ -238,10 +238,10 @@
       </ol>
     </div>
     <br/>
-    <footer class="statcss" style="background-color: rgba(235,235,235,0.6);">
-		<p style="color:purple;">ALL COPYRIGHT RESERVED || DATA COLLETCTED FROM JADEBONE</p>
-		<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1278032070'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "v1.cnzz.com/z_stat.php%3Fid%3D1278032070%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
-	</footer>
+  <footer class="statcss" style="margin-top: 30px;">
+    <p>ALL COPYRIGHT RESERVED || DATA COLLETCTED FROM JADEBONE</p>
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1278032070'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "v1.cnzz.com/z_stat.php%3Fid%3D1278032070%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
+  </footer>
 	<canvas id="demo-canvas" style="position:fixed ;bottom: 10px; z-index:-1;"></canvas>
 </div>
 <script src="js/spirit_bubble.js"></script>
