--- a/index.html
+++ b/index.html
@@ -73,44 +73,52 @@ $(function(){//极速 	#FFBBFF
 		'even' :'<span style="color:#FF83FA;">仁施￥10元金贝，神豪气贯长虹，仁播华夏！</span>'	
 	},{
 		'months' : 6,
-		'times' :'<span style="color:#FFBBFF;">楼顶供奉尊者雅名【我的第220位**】</span>',
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉尊者雅名【我的第220**】</span>',
 		'even' :'<span style="color:#FF83FA;">硕捐￥10元宝币，尊者仗义疏财，乐善好施！</span>'			
-	},{
-		'months' : 10,
-		'times' :'<span style="color:#FFBBFF;">楼顶供奉贵人赫名【**꧂】</span>',
-		'even' :'<span style="color:#FF83FA;">恩赐￥5元银饼，贵人鼎助义施，胸怀百川！</span>'		
 	},{
 		'months' : 10,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉恩公威名【肥肉变成**】</span>',
 		'even' :'<span style="color:#FF83FA;">瀚赏￥5元大洋，恩人古道热肠，雪中送炭！</span>'			
+	},{
+		'months' : 10,
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉公子美名【风火**】</span>',
+		'even' :'<span style="color:#FF83FA;">义哺￥10元玉币，公子汲水施恩，气吞山河！</span>'			
 	}]},
 	{
 	'year' : '<a href="https://popzoo.github.io/barrage/index.html" target="_blank" style="color:#BF3EFF;">点赞</a>',
 	'events' :[
 	{
 		'months' : 2,
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉贵人荣名【**꧂】</span>',
+		'even' :'<span style="color:#FF83FA;">恩赐￥5元银饼，贵人鼎助义施，胸怀百川！</span>'
+	},{			
+		'months' : 2,
+		'times' :'<span style="color:#FFBBFF;">供奉排位，虚以待座</span>',// 殊名，仁馈
+		'even' :'<span style="color:#FF83FA;">静候各方神豪大能、仁君义公坐镇此方宝座</span>'
+	},{				
+		'months' : 6,
 		'times' :'♨♨♨♨♨♨氤氲缭绕♨♨♨♨♨♨',
 		'even' :'This building need many kind of person!'
 	},{
-		'months' : 2,
+		'months' : 6,
 		'times' :'♨♨♨♨♨♨供奉香火♨♨♨♨♨♨',
 		'even' :'Only donator can site this place!'
 	},{		
-		'months' : 6,
+		'months' : 10,
 		'times' :'<span style="color:greenyellow;">开启隐藏之路</span>',
 		'even' :'<span style="color:lawngreen;">隐藏功能需要用户上传私有弹幕后便可使用，主要是公有弹幕被好多人霸屏滥用的一塌糊涂！</span>'
 	},{
-		'months' : 6,
+		'months' : 10,
 		'times' :'<span style="color:greenyellow;">点赞无私捐助</span>',
 		'even' :'<span style="color:lawngreen;">点击上方紫色字体的“点赞”按钮后，即可跳转到获取隐藏功能的详细使用教程的页面！</span>'		
-	},{
-		'months' : 10,
-		'times' :'火力横扫，足迹万千',
-		'even' :'签到手速王，顶级车队logo'
-	},{
-		'months' : 10,
-		'times' :'笑傲鱼塘，睥睨水友',
-		'even' :'满级粉丝牌子，幻神弹幕特效'	
+	// },{
+		// 'months' : 10,
+		// 'times' :'火力横扫，足迹万千', 
+		// 'even' :'签到手速王，顶级车队logo'
+	// },{
+		// 'months' : 10,
+		// 'times' :'笑傲鱼塘，睥睨水友',
+		// 'even' :'满级粉丝牌子，幻神弹幕特效'	
 	}]},	
 	// {
 	// 'year' : '<a href="https://popzoo.github.io/zoo/hiddenManual.html" target="_blank">点赞</a>',
@@ -526,18 +534,9 @@ $(function(){//极速 	#FFBBFF
 			}
 		}
 	}
-	// function jumpToShareNode(){
-	// 	sessionStorage.setItem('personalDanmu',"limit");
-	// 	window.open("https://popzoo.github.io/pop/fireroom.html","_blank");
-	// }
 	function jumpToScanBoard(){
 		window.open("https://lvlanxing.coding.me/monitor/","_blank");
 	}
-	// function changeCnzzStyle(){
-	// 	let cnzzStyle = document.getElementById("cnzz_stat_icon_1278032070");
-	// 	cnzzStyle.setAttribute("style","color:orange;")
-	// }
-	
 </script>
 </body>
 </html>
