--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChat.png" width="300px">
     	</div>		
 		<p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
-		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(53,53,53,0);color:red;margin-bottom: 70px;">薅羊毛新脚本(V0.8.7)的安全全面升级，建议大家赶快升级使用新脚本，新脚本还支持全匿名用户功能(见隐藏教程)，旧版本将于3天后停止服务。随后也将对弹幕库也进行安全升级改造，为防止意外，建议大家备份哦，给大家带来的不便还请谅解！</p>
+		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(53,53,53,0);color:red;margin-bottom: 70px;">薅羊毛脚本的安全升级，建议大家赶快升级使用新脚本，新脚本还支持全匿名用户功能(见隐藏教程)，旧版本将要两日后停止服务。弹幕库也已升级已完毕，如果有丢失私有弹幕的情况，请联系作者大大搞定！</p>
 		<div class="event_wrap clearfix">
 			<div class="middle_line"></div>
 		</div>
