--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     	<div id="qr_code_pic" style="text-align: center; display: none;">
     	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/Alipay.png" width="300px">
     	    <span style="margin: 0 100px;"></span>
-    	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChat.png" width="300px">
+    	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChatPay.png" width="300px">
     	</div>		
 		<p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
 		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(53,53,53,0);color:red;margin-bottom: 70px;">薅羊毛脚本的安全升级，建议大家赶快升级使用新脚本，新脚本还支持全匿名用户功能(见隐藏教程)，旧版本将要两日后停止服务。弹幕库也已升级已完毕，如果有丢失私有弹幕的情况，请联系作者大大搞定！</p>
@@ -487,11 +487,19 @@ $(function(){//极速 	#FFBBFF
 	},{
 		'months' : 8,
 		'times' :'V0.8.8',
-		'even' :'……敬请期待……'	
+		'even' :'修复网络错误的bug，增加节点缓存机制，增加脚本更新的地址跳转链接'	
 	},{
 		'months' : 10,
 		'times' :'V0.8.9',
-		'even' :'……未来可期……'							
+		'even' :'修复重启浏览器弹幕仍被本地缓存的bug，将极速签到功能整合到二合一开关和火力停止中'	
+	// },{
+	// 	'months' : 8,
+	// 	'times' :'V0.8.8',
+	// 	'even' :'……敬请期待……'	
+	// },{
+	// 	'months' : 10,
+	// 	'times' :'V0.8.9',
+	// 	'even' :'……未来可期……'							
 	}]},			
 	{
 	'year' : '<div onclick="jumpToScanBoard()" style="color:#EE3B3B;">除恶</div>',
