--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChatPay.png" width="300px">
     	</div>		
 		<p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
-		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(53,53,53,0);color:red;margin-bottom: 70px;">薅羊毛脚本的安全升级，建议大家赶快升级使用新脚本，新脚本还支持全匿名用户功能(见隐藏教程)，旧版本将要两日后停止服务。弹幕库也已升级已完毕，如果有丢失私有弹幕的情况，请联系作者大大搞定！</p>
+		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(53,53,53,0);color:red;margin-bottom: 70px;">薅羊毛脚本旧版本今日晚20点停止服务，请大家没升级的做好升级准备，自己二次开发的大爷们也请移步到新版去整蛊撒，旧版服务将打包投掷垃圾桶。在捐助列表中微信打赏的三位老爷们（**꧂，**亮，**燚）也请把邮箱或QQ等联系方式告知斑竹大大，等到圣诞节我好一起给各位打赏老爷们送福利(必有惊喜)哈！</p>
 		<div class="event_wrap clearfix">
 			<div class="middle_line"></div>
 		</div>
@@ -70,15 +70,15 @@ $(function(){//极速 	#FFBBFF
 	},{
 		'months' : 6,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉神豪宝名【**燚】</span>',		
-		'even' :'<span style="color:#FF83FA;">仁施￥10元金贝，神豪气贯长虹，仁播华夏！</span>'	
+		'even' :'<span style="color:#FF83FA;">仁施￥10元金贝，神豪乐善好施，气贯长虹！</span>'	
 	},{
 		'months' : 6,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉尊者雅名【我的第220**】</span>',
-		'even' :'<span style="color:#FF83FA;">硕捐￥10元宝币，尊者仗义疏财，乐善好施！</span>'			
+		'even' :'<span style="color:#FF83FA;">硕捐￥10元宝币，尊者仗义疏财，彪炳千秋！</span>'			
 	},{
 		'months' : 10,
-		'times' :'<span style="color:#FFBBFF;">楼顶供奉恩公威名【肥肉变成**】</span>',
-		'even' :'<span style="color:#FF83FA;">瀚赏￥5元大洋，恩人古道热肠，雪中送炭！</span>'			
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉金主殊名【**亮】</span>',
+		'even' :'<span style="color:#FF83FA;">仁馈￥10元刀币，金主大爱无疆，万古长青！</span>'			
 	},{
 		'months' : 10,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉公子美名【风火**】</span>',
@@ -93,8 +93,10 @@ $(function(){//极速 	#FFBBFF
 		'even' :'<span style="color:#FF83FA;">恩赐￥5元银饼，贵人鼎助义施，胸怀百川！</span>'
 	},{			
 		'months' : 2,
-		'times' :'<span style="color:#FFBBFF;">供奉排位，虚以待座</span>',// 殊名，仁馈
-		'even' :'<span style="color:#FF83FA;">静候各方神豪大能、仁君义公坐镇此方宝座</span>'
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉恩公威名【肥肉变成**】</span>',
+		'even' :'<span style="color:#FF83FA;">瀚赏￥5元大洋，恩人古道热肠，流芳百世！</span>'
+		// 'times' :'<span style="color:#FFBBFF;">供奉排位，虚以待座</span>',// 殊名，仁馈 雪中送炭 仁播华夏
+		// 'even' :'<span style="color:#FF83FA;">静候各方神豪大能、仁君义公坐镇此方宝座</span>'
 	},{				
 		'months' : 6,
 		'times' :'♨♨♨♨♨♨氤氲缭绕♨♨♨♨♨♨',
