--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChatPay.png" width="300px">
     	</div>		
 		<p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
-		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(53,53,53,0);color:red;margin-bottom: 70px;">薅羊毛脚本旧版本今日晚20点停止服务，请大家没升级的做好升级准备，自己二次开发的大爷们也请移步到新版去整蛊撒，旧版服务将打包投掷垃圾桶。在捐助列表中微信打赏的三位老爷们（**꧂，**亮，**燚）也请把邮箱或QQ等联系方式告知斑竹大大，等到圣诞节我好一起给各位打赏老爷们送福利(必有惊喜)哈！</p>
+		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(53,53,53,0);color:red;margin-bottom: 70px;">薅羊毛脚本旧版本今日晚20点停止服务，请大家没升级的做好升级准备，自己二次开发的大佬们也请移步到新版去整蛊撒，旧版服务将打包投掷垃圾桶。在捐助列表中微信打赏的三位老爷们（**꧂，**亮，**燚）也请把邮箱或QQ等联系方式告知斑竹大大，等到圣诞节我好一起给各位打赏老爷们送福利(必有惊喜)哈！</p>
 		<div class="event_wrap clearfix">
 			<div class="middle_line"></div>
 		</div>
